2015-05-20  Kirit Saelensminde  <kirit@felspar.com>
 Add SHA256 to the crypto wrappers.

2015-05-18  Kirit Saelensminde  <kirit@felspar.com>
 Replace all uses of `boost::filesystem::wpath` with `path`.

2015-05-11  Kirit Saelensminde  <kirit@felspar.com>
 When building an executable make sure that we pull in at least everything for fost-core.
 Fix a build error with Boost 1.58.0.

2015-05-09  Kirit Saelensminde  <kirit@felspar.com>
 Switch to C++14.

2015-04-29  Kirit Saelensminde  <kirit@felspar.com>
 Improve the exception information where a `jcursor::insert` fails due to existing data at the requested key.

2015-04-27  Kirit Saelensminde  <kirit@felspar.com>
 Allow the C++ version to be specified using the `cpp11` and `cpp14` command line options to bjam.

2015-01-13  Kirit Saelensminde  <kirit@felspar.com>
 Removed a very unsafe string coercion that is no longer needed now we have tagged strings.

2014-11-27  Kirit Saelensminde  <kirit@felspar.com>
 Added a mechanism for joining paths (`fostlib::join_paths`) in the same sort of way that URL paths are joined.

2014-10-31  Kirit Saelensminde  <kirit@felspar.com>
 Improved FSL_CHECK so it doesn't need to declare a local variable.

2014-10-18  Kirit Saelensminde  <kirit@felspar.com>
 Added a new test macro `FSL_CHECK_ERROR` that ensures that the error between two values (normally reals) is less than an error term.

2014-09-07  Kirit Saelensminde  <kirit@felspar.com>
 The meta data set on the progress for a task is now made available to the meter readings.
 There is a new `fostlib::cli::monitor` function that can be used to display a progress bar monitoring work towards a future.
 Futures now return `const&`s instead of copies of the value when they're dereferenced.

2014-09-06  Kirit Saelensminde  <kirit@felspar.com>
 Allow `fostlib::future<>` instances to be compared for equality.

2014-08-30  Kirit Saelensminde  <kirit@felspar.com>