@@ -83,7 +83,7 @@ std::vector< unsigned char > fostlib::digester::digest() const {
     fostlib::digester::impl::check(m_implementation);
     impl &local(*m_implementation);
 
-    boost::scoped_ptr< unsigned char > output(
+    std::unique_ptr< unsigned char > output(
         new unsigned char[local.output_size()]);
     local.final(output.get());
 
