@@ -1,5 +1,5 @@
 /*
-    Copyright 2001-2013, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2001-2015, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -76,7 +76,7 @@ namespace fostlib {
             ~structured_handler() throw ();
 
         public:
-            boost::scoped_ptr< structure_information > m_info;
+            std::unique_ptr< structure_information > m_info;
         };
 
 
