@@ -1,5 +1,5 @@
 /*
-    Copyright 2010-2014, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2010-2015, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -90,7 +90,7 @@ namespace fostlib {
         /// A scoped sink is used to provide some logging capability for a short period of time
         template< typename S >
         class scoped_sink : detail::scoped_sink_base {
-            boost::scoped_ptr< S > sink_object;
+            std::unique_ptr< S > sink_object;
             bool log(const message &m) {
                 return (*sink_object)(m);
             }
