@@ -1,5 +1,5 @@
 /*
-    Copyright 1997-2014, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 1997-2015, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -274,7 +274,7 @@ namespace fostlib {
         }
 
     private:
-        boost::scoped_ptr< O > object;
+        std::unique_ptr< O > object;
     };
 
 
