@@ -1,5 +1,5 @@
 /*
-    Copyright 2008, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2008-2015, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -7,7 +7,7 @@
 
 
 #include <fost/cli>
-#include <fost/main.hpp>
+#include <fost/main>
 
 
 namespace {
@@ -20,10 +20,10 @@ namespace {
 
 FSL_MAIN(
     L"FizzBuzz",
-    L"FizzBuzz\nCopyright (c) 2008 Felspar Co. Ltd."
+    L"FizzBuzz\nCopyright (c) 2008-2015 Felspar Co. Ltd."
 )( fostlib::ostream &out, fostlib::arguments &args ) {
     // Where we can store any numeric setting we're given
-    boost::scoped_ptr< fostlib::setting< int > > count;
+    std::unique_ptr< fostlib::setting< int > > count;
     if ( args.size() == 2 )
         count.reset( new fostlib::setting< int >( L"Command line", c_count, fostlib::coerce< int >( args[ 1 ] ) ) );
     fizzbuzz( out );
